objects/Utilization_Statistics__c.object
<CustomObject>
    <description>This custom object is used to track completed IDEXX Learning Center hours.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Utilitazion_Statistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_Name__c</fullName>
        <label>Attendee Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Utilitazion_Statistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Utilization Statistics</label>
    <nameField>
        <label>Utilization Statistics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utilization Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>